Fix placeholder legibility in wizards

--- a/assets/linker/styles/main.css
+++ b/assets/linker/styles/main.css
@@ -96,6 +96,10 @@ input {
 #regWizard .hqcompanyProvince {
   height: 16px;
 }
+#regWizard .hqfield:disabled {
+  color: #000;
+  font-weight: 400;
+}
 #regWizard .checkbox {
   height: auto;
   width: auto;
@@ -131,7 +135,7 @@ input {
   font-size: 11px;
   padding: 0px 4px;
   -webkit-appearance: none;
-  color: #b2b2b2;
+  color: #7F7F7F;
 }
 #regWizard .styledSelect option { /* Dropdown font fix for Firefox */
   color: black;
@@ -882,17 +886,23 @@ transition: all 200ms ease-in-out;
 /* Drop Down change font */
 
 #regWizard input::-webkit-input-placeholder {
-	color: #A9A9A9;
-	font-weight: 400;
+  color: #7F7F7F;
+  font-weight: 400;
+}
+
+#regWizard input::-moz-placeholder {
+  color: #7F7F7F;
+  opacity: 1;
+  font-weight: 400;
 }
 
 #regWizard select::-webkit-select-placeholder {
-	color: #A9A9A9;
-	font-weight: 400;
+  color: #A9A9A9;
+  font-weight: 400;
 }
 
 #tabs input::-webkit-input-placeholder {
-  color: #A9A9A9;
+  color: #7F7F7F;
   font-weight: 400;
 }
 /*
